docs/spec/grammar/conformance/reject/19-grow-reserved-not-active.myc
// rejected: 'grow' is a DN-03 §1 surface-tier reserved keyword (derive-like generative capability
// extension — `grow Trait for Type { … }`). It is reserved-not-active: it lexes as a keyword (never
// a silent identifier, G2) but no L1 construct consumes it yet, so it cannot appear at item
// position. The parser emits a teaching diagnostic naming DN-03 §1. Its construct lands with
// M-664's surface step. ('consume' is reserved the same way; see fixture 18.)
nodule demo
grow worker
